<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
    android:fitsSystemWindows="true", 可以讓系統狀態欄的背景為透明
    CoordinatorLayout應該搭配AppBarLayout 一起使用, 可以避免控件被覆蓋的情形
    -->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.ramotion.garlandview.example.profile.ProfileActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <!--
            關於 app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            scroll: 當有添加多個flags的時候, 一定要加上scroll
            snap: 當上下滑動的時候, 滑到一定程度 鬆開手指, 會自動收縮 或者展開
            exitUntilCollapsed: ChildView不會完全退出螢幕, 保留著你設置的最小高度

            AppBarLayout和CollapsingToolbarLayout 一起使用的原因, 當我們需要圖片和toolbar一起使用, 並且保留toolbar在最上方
            -->
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipChildren="false"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:scrimVisibleHeightTrigger="240dp"
                app:titleEnabled="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp160"
                        android:layout_marginTop="@dimen/dp190"
                        android:src="@drawable/a_01"/>

                    <ImageView
                        android:id="@+id/header_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp190"
                        android:scaleType="centerCrop"
                        android:src="@drawable/a_01"
                        android:transitionName="@string/transition_background"/>
                </FrameLayout>

                <!-- app:layout_collapseMode="pin", 確保在CollapsingToolbarLayout摺疊完之前, 可以一直固定在原位置不動 -->
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp160"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

                <FrameLayout
                    android:id="@+id/header_info"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp190"
                    android:layout_gravity="bottom"
                    android:background="@android:color/white"
                    android:clipChildren="false"
                    android:transitionName="@string/transition_card">

                    <FrameLayout
                        android:id="@+id/avatar_border"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal|top"
                        android:layout_marginTop="-50dp"
                        android:background="@drawable/avatar_border_details"
                        android:transitionName="@string/transition_avatar_border">

                        <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/details_avatar_border"
                            android:scaleType="centerCrop"/>
                    </FrameLayout>

                    <LinearLayout
                        android:id="@+id/texts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/profile_texts_h_offset"
                        android:layout_marginStart="@dimen/profile_texts_h_offset"
                        android:layout_marginTop="@dimen/profile_texts_v_max_offset"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/details_name_color"
                            android:textSize="24sp"
                            app:font='@{"SF-UI-Display-Regular.ttf"}'/>

                        <TextView
                            android:id="@+id/tv_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="@color/details_info_color"
                            android:textSize="17sp"
                            app:font='@{"SF-UI-Display-Regular.ttf"}'/>

                        <TextView
                            android:id="@+id/tv_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:maxLines="1"
                            android:textColor="#9199BE"
                            android:textSize="18.4sp"
                            app:font='@{"SF-UI-Display-Semibold.ttf"}'/>
                    </LinearLayout>
                </FrameLayout>

                <!-- app:layout_collapseMode="pin", 確保在CollapsingToolbarLayout摺疊完之前, 可以一直固定在原位置不動 -->
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    app:font='@{"SF-UI-Display-Regular.ttf"}'
                    app:layout_collapseMode="pin"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/details_list_color"
            android:transitionName="@string/transition_list"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </android.support.design.widget.CoordinatorLayout>
</layout>